<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="17dp"
    tools:context=".MainActivity"
    android:layout_marginStart="17dp">

    <TextView
        android:id="@+id/amountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/amountInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/amountinput"
        android:inputType="number" />

    <TextView
        android:id="@+id/PaxView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/paxnum" />

    <EditText
        android:id="@+id/PaxInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/paxnumInput"
        android:inputType="number" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginRight="17dp"
        android:orientation="horizontal"
        android:layout_marginEnd="17dp">

        <ToggleButton
            android:id="@+id/svsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/svs"
            android:textOn="@string/svs" />

        <ToggleButton
            android:id="@+id/gstButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="@string/gst"
            android:textOn="@string/gst" />
    </LinearLayout>

    <TextView
        android:id="@+id/discountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/discount" />

    <EditText
        android:id="@+id/discountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/discountinput"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/radioGroupPayment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/radioButtonCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/cash" />

        <RadioButton
            android:id="@+id/radioButtonPayNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paynow" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginRight="17dp"
        android:orientation="horizontal"
        android:layout_marginEnd="17dp">

        <Button
            android:id="@+id/splitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/split"
            android:backgroundTint="#d6d7d7"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:backgroundTint="#d6d7d7"
            android:textColor="@color/black"/>
    </LinearLayout>

    <TextView
        android:id="@+id/totalBillView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:text="@string/totalbill" />

    <TextView
        android:id="@+id/splitAmountView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:text="@string/splitamount" />

</LinearLayout>